added html content

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 
     <style>
       body {
-        background-color: #48231B;
+        background-color: #22252D;
         text-align: center;
         margin: auto;
         position: absolute;
