added css and js files

--- a/home.html
+++ b/home.html
@@ -4,29 +4,18 @@
     <meta charset="utf-8">
     <title>William Miguel</title>
 
-    <style>
-      body {
-        background-color: #22252D;
-        text-align: center;
-        margin: auto;
-        position: absolute;
-        top: 45%;
-        left: 50%;
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-      }
-      div {
-        background-color: #ededed;
-        padding: 15px 25px;
-        border: 3px solid #F57A5B;
-      }
-    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;400;500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <div>
-      <h1>Hi there 👋 - I'm William.</h1>
+      <h1>Hi 👋 I'm William</h1>
       <h3>Welcome to my website. It's a work in progress (again).</h3>
-      <p>In the meantime, you can find me on <a href="https://twitter.com/wmiguel4815">Twitter</a> or on <a href="https://letterboxd.com/wmiguel4815/">Letterboxd</a> 👍</p>
+      <p>In the meantime, you can find me on <a href="https://twitter.com/wmiguel4815">Twitter</a> or <a href="https://letterboxd.com/wmiguel4815/">Letterboxd</a> 👍</p>
     </div>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
