--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <div>
+    <div id="introduction">
       <h1>Hi, how are you? I'm William 👋</h1>
       <h3>Welcome to my website. It's a work in progress (again).</h3>
       <p>In the meantime, you can find me on <a href="https://twitter.com/wmiguel4815">Twitter</a> or <a href="https://letterboxd.com/wmiguel4815/">Letterboxd</a> 👍</p>
