--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
+
     <title>William Miguel</title>
+    <link rel="shortcut icon" type="image/png" href="images/wm-favicon.png"/>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <!-- Google Fonts -->
