--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div id="introduction">
       <h1>Hi, how are you? I'm William 👋</h1>
-      <h3>Welcome to my website. It's a work in progress (again).</h3>
-      <p>In the meantime, you can find me on <a href="https://dribbble.com/wmiguel4815">Dribbble</a>, <a href="https://www.instagram.com/wmiguel4815/">Instagram</a>, <a href="https://twitter.com/wmiguel4815">Twitter</a> or <a href="https://letterboxd.com/wmiguel4815/">Letterboxd</a> 👍</p>
+      <h2>Welcome to my website. It's a work in progress (again).</h2>
+      <p>In the meantime, you can find me on <a href="https://www.instagram.com/wmiguel4815/">Instagram</a>, <a href="https://twitter.com/wmiguel4815">Twitter</a> or <a href="https://letterboxd.com/wmiguel4815/">Letterboxd</a> 👍</p>
     </div>
 
     <script src="js/main.js"></script>
