--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
       <h1>Projects 📁</h1>
       <h2>Here you'll find a collection of my projects.</h2>
       <p>
-        <a href="https://wmiguel.io/projects/directors">Directors</a> | <a href="https://wmiguel.github.io/rogerebert/">Roger Ebert Reviews</a>
+        <a href="https://wmiguel.io/projects/directors">Directors</a> | <a href="https://wmiguel.io/projects/roger-ebert">Roger Ebert Reviews</a>
       </p>
     </div>
 
