Adjusted image url

--- a/projects/roger-ebert.html
+++ b/projects/roger-ebert.html
@@ -43,7 +43,7 @@
 
               <!-- Error Picture of Roger Ebert -->
               <div id="errorImage" class="row">
-                <img src="../images/projects/rogerebert/error-roger.jpg">
+                <img src="../../images/projects/rogerebert/error-roger.jpg">
               </div>
             </div>
 
