added The Grid Album Project to Portfolio

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,9 @@
       <h1>Projects 📁</h1>
       <h2>Here you'll find a collection of my projects.</h2>
       <p>
-        <a href="https://wmiguel.io/projects/directors">Directors</a> | <a href="https://wmiguel.io/projects/roger-ebert">Roger Ebert Reviews</a>
+        <a href="https://wmiguel.io/projects/directors">Directors</a> |
+        <a href="https://wmiguel.io/projects/roger-ebert">Roger Ebert Reviews</a> |
+        <a href="https://wmiguel.io/projects/grid-project">The Grid Album Project</a>
       </p>
     </div>
 
