--- a/projects/roger-ebert.html
+++ b/projects/roger-ebert.html
@@ -84,6 +84,9 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+
+
     <!-- Holds all JS functions -->
     <script src="../js/projects/rogerebert/main.js"></script>
 
