Added new styles to The Grid Album Project

--- a/projects/grid-project.html
+++ b/projects/grid-project.html
@@ -18,8 +18,8 @@
   <body>
     <!-- Main Elements -->
     <nav class="header">
-      <h2>William Miguel | The Grid Album Project</h2>
-      <h2>&times;</h2>
+      <h2><a href="https://wmiguel.io/">William Miguel</a> | The Grid Album Project</h2>
+      <button class="about-button">&times;</button>
     </nav>
 
     <div class="container">
