updated Grid Project html, css, and js

--- a/projects/grid-project.html
+++ b/projects/grid-project.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" type="image/png" href="../images/wm-favicon.png"/>
     <link rel="stylesheet" href="../css/projects/grid-project/style.css">
   </head>
+
   <body>
     <!-- Main Elements -->
     <nav class="header">
@@ -25,9 +26,8 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-8"></div>
-
-        <div class="col-4"></div>
+        <div class="col-md-8"></div>
+        <div class="col-md-4"></div>
       </div>
 
     </div>
