--- a/projects/grid-project.html
+++ b/projects/grid-project.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <!-- Main Elements -->
+    <!-- Main Elements Here -->
     <nav class="header">
       <h2><a href="https://wmiguel.io/">William Miguel</a> | The Grid Album Project</h2>
       <button class="about-button">&times;</button>
