cool new background

--- a/projects/grid-project.html
+++ b/projects/grid-project.html
@@ -17,6 +17,8 @@
   </head>
 
   <body>
+    <div class="background-image"></div>
+
     <!-- Main Elements Here -->
     <nav class="header">
       <h2><a href="https://wmiguel.io/">William Miguel</a> | The Grid Album Project</h2>
