Added new pages, and edited css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+
+    <!-- Main Elements Here -->
+    <nav class="header">
+      <h2><a href="https://wmiguel.io/">William Miguel</a> | Graphic Design & Web Development</h2>
+      <button class="about-button">&times;</button>
+    </nav>
+
     <div id="introduction">
       <h1>Hi, how are you? I'm William 👋</h1>
       <h2>Welcome to my website. It's a work in progress (again).</h2>
