--- a/projects.html
+++ b/projects.html
@@ -8,23 +8,91 @@
     <link rel="shortcut icon" type="image/png" href="images/wm-favicon.png"/>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
+
   <body>
-    <div id="introduction">
-      <h1>Projects 📁</h1>
-      <h2>Here you'll find a collection of my projects.</h2>
-      <p>
-        <a href="https://wmiguel.io/projects/directors">Directors</a> |
-        <a href="https://wmiguel.io/projects/roger-ebert">Roger Ebert Reviews</a> |
-        <a href="https://wmiguel.io/projects/grid-project">The Grid Album Project</a>
-      </p>
+
+    <!-- Main Elements Here -->
+    <nav class="header">
+      <h2><a href="https://wmiguel.io/">William Miguel</a> | Projects</h2>
+      <button class="about-button">&times;</button>
+    </nav>
+
+    <div id="container">
+
+      <a href="https://wmiguel.io/projects/arcana-books" class="inprogress">
+        <div id="project">
+          <img src="https://cdn.audionamix.com//services-icon-01.png">
+          <h2>Arcana Books</h2>
+        </div>
+      </a>
+
+      <a href="https://wmiguel.io/projects/directors" class="inprogress">
+        <div id="project">
+          <img src="https://cdn.audionamix.com//services-icon-01.png">
+          <h2>Blank Check Directors</h2>
+        </div>
+      </a>
+
+      <a href="https://wmiguel.io/projects/cinemind-magazine" class="inprogress">
+        <div id="project">
+          <img src="https://cdn.audionamix.com//services-icon-01.png">
+          <h2>Cinemind Magazine</h2>
+        </div>
+      </a>
+
+      <a href="https://wmiguel.io/projects/criterion-channel" class="inprogress">
+        <div id="project">
+          <img src="https://cdn.audionamix.com//services-icon-01.png">
+          <h2>Criterion Channel (Redesign)</h2>
+        </div>
+      </a>
+
+      <a href="https://wmiguel.io/projects/grid-project">
+        <div id="project">
+          <img src="https://cdn.audionamix.com//services-icon-01.png">
+          <h2>The Grid Album Project</h2>
+        </div>
+      </a>
+
+      <a href="https://wmiguel.io/projects/marvel-annual-report" class="inprogress">
+        <div id="project">
+          <img src="https://cdn.audionamix.com//services-icon-01.png">
+          <h2>Marvel Annual Report</h2>
+        </div>
+      </a>
+
+      <a href="https://wmiguel.io/projects/movie-planner" class="inprogress">
+        <div id="project">
+          <img src="https://cdn.audionamix.com//services-icon-01.png">
+          <h2>Movie Planner</h2>
+        </div>
+      </a>
+
+      <a href="https://wmiguel.io/projects/roger-ebert">
+        <div id="project">
+          <img src="https://cdn.audionamix.com//services-icon-01.png">
+          <h2>Roger Ebert Reviews</h2>
+        </div>
+      </a>
+
+      <a href="https://wmiguel.io/projects/69-love-songs" class="inprogress">
+        <div id="project">
+          <img src="https://cdn.audionamix.com//services-icon-01.png">
+          <h2>69 Love Songs</h2>
+        </div>
+      </a>
+
     </div>
 
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
+
   </body>
+
 </html>
