--- a/projects/marvel-annual-report.html
+++ b/projects/marvel-annual-report.html
@@ -20,7 +20,7 @@
 
     <!-- Main Elements Here -->
     <nav class="header">
-      <h2><a href="https://wmiguel.io/">William Miguel</a> | Projects | 69 Love Songs</h2>
+      <h2><a href="https://wmiguel.io/">William Miguel</a> | Projects | Marvel Annual Report</h2>
       <button class="about-button">&times;</button>
     </nav>
 
