--- a/projects/grid-project.html
+++ b/projects/grid-project.html
@@ -21,7 +21,7 @@
 
     <!-- Main Elements Here -->
     <nav class="header">
-      <h2><a href="https://wmiguel.io/">William Miguel</a> | The Grid Album Project</h2>
+      <h2><a href="https://wmiguel.io/">William Miguel</a> | Projects | The Grid Album Project</h2>
       <button class="about-button">&times;</button>
     </nav>
 
