added css files, and folders for each project

--- a/projects.html
+++ b/projects.html
@@ -26,28 +26,28 @@
 
     <div id="container">
 
-      <a href="https://wmiguel.io/projects/arcana-books" class="inprogress">
+      <a href="https://wmiguel.io/projects/arcana-books" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Arcana Books</h2>
         </div>
       </a>
 
-      <a href="https://wmiguel.io/projects/directors" class="inprogress">
+      <a href="https://wmiguel.io/projects/directors" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Blank Check Directors</h2>
         </div>
       </a>
 
-      <a href="https://wmiguel.io/projects/cinemind-magazine" class="inprogress">
+      <a href="https://wmiguel.io/projects/cinemind-magazine" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Cinemind Magazine</h2>
         </div>
       </a>
 
-      <a href="https://wmiguel.io/projects/criterion-channel" class="inprogress">
+      <a href="https://wmiguel.io/projects/criterion-channel" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Criterion Channel (Redesign)</h2>
@@ -61,14 +61,14 @@
         </div>
       </a>
 
-      <a href="https://wmiguel.io/projects/marvel-annual-report" class="inprogress">
+      <a href="https://wmiguel.io/projects/marvel-annual-report" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Marvel Annual Report</h2>
         </div>
       </a>
 
-      <a href="https://wmiguel.io/projects/movie-planner" class="inprogress">
+      <a href="https://wmiguel.io/projects/movie-planner" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Movie Planner</h2>
@@ -82,7 +82,7 @@
         </div>
       </a>
 
-      <a href="https://wmiguel.io/projects/69-love-songs" class="inprogress">
+      <a href="https://wmiguel.io/projects/69-love-songs.html" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>69 Love Songs</h2>
