--- a/projects/grid-project.html
+++ b/projects/grid-project.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <link rel="shortcut icon" type="image/png" href="../images/wm-favicon.png"/>
-    <link rel="stylesheet" href="../css/projects/grid-project/style.css">
+    <link rel="stylesheet" href="../css/projects/grid-project/main.css">
   </head>
 
   <body>
@@ -21,7 +21,7 @@
 
     <!-- Main Elements Here -->
     <nav class="header">
-      <h2><a href="https://wmiguel.io/">William Miguel</a> | Projects | The Grid Album Project</h2>
+      <h2><a href="https://wmiguel.io/">William Miguel</a> | <a href="https://wmiguel.io/projects">Projects</a> | The Grid Album Project</h2>
       <button class="about-button">&times;</button>
     </nav>
 
