--- a/projects/69-love-songs.html
+++ b/projects/69-love-songs.html
@@ -13,27 +13,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" href="../css/projects/69-love-songs/main.css">
   </head>
 
   <body>
 
     <!-- Main Elements Here -->
     <nav class="header">
-      <h2><a href="https://wmiguel.io/">William Miguel</a> | Projects | 69 Love Songs</h2>
+      <h2><a href="https://wmiguel.io/">William Miguel</a> | <a href="https://wmiguel.io/projects">Projects</a> | 69 Love Songs</h2>
       <button class="about-button">&times;</button>
     </nav>
 
     <div id="container">
 
       <iframe style="border: 0; width: 400px; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=743019552/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://themagneticfields.bandcamp.com/album/69-love-songs">69 Love Songs by The Magnetic Fields</a></iframe>
-
-      <a href="https://wmiguel.io/projects/arcana-books" class="inprogress">
-        <div id="project">
-          <img src="https://cdn.audionamix.com//services-icon-01.png">
-          <h2>Arcana Books</h2>
-        </div>
-      </a>
 
       <a href="https://wmiguel.io/projects/directors" class="inprogress">
         <div id="project">
