--- a/projects/roger-ebert.html
+++ b/projects/roger-ebert.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <!-- My Custom CSS -->
     <link rel="stylesheet" href="../css/projects/rogerebert/main.css">
@@ -17,6 +19,11 @@
     <title>What Did Roger Ebert Say?</title>
   </head>
   <body>
+    <!-- Main Elements Here -->
+    <nav class="header">
+      <h2><a href="https://wmiguel.io/">William Miguel</a> | <a href="https://wmiguel.io/projects">Projects</a> | Roger Ebert Reviews</h2>
+      <button class="about-button">&times;</button>
+    </nav>
 
     <!-- The Popup Modal -->
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-hidden="true">
