updated css and html files

--- a/projects.html
+++ b/projects.html
@@ -25,67 +25,67 @@
     </nav>
 
     <div id="container">
-
+      <!-- 69 Love Songs -->
+      <a href="https://wmiguel.io/projects/69-love-songs.html" class="">
+        <div id="project">
+          <img src="https://cdn.audionamix.com//services-icon-01.png">
+          <h2>69 Love Songs</h2>
+        </div>
+      </a>
+      <!-- Arcana Books -->
       <a href="https://wmiguel.io/projects/arcana-books" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Arcana Books</h2>
         </div>
       </a>
-
-      <a href="https://wmiguel.io/projects/directors" class="">
+      <!-- Blank Check Timeline -->
+      <a href="https://wmiguel.io/projects/blank-check" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
-          <h2>Blank Check Directors</h2>
+          <h2>Blank Check Timeline</h2>
         </div>
       </a>
-
+      <!-- Cinemind Magazine -->
       <a href="https://wmiguel.io/projects/cinemind-magazine" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Cinemind Magazine</h2>
         </div>
       </a>
-
+      <!-- Criterion Channel -->
       <a href="https://wmiguel.io/projects/criterion-channel" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
-          <h2>Criterion Channel (Redesign)</h2>
+          <h2>Criterion Channel</h2>
         </div>
       </a>
-
-      <a href="https://wmiguel.io/projects/grid-project">
+      <!-- The Grid Album Project -->
+      <a href="https://wmiguel.io/projects/grid-project" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>The Grid Album Project</h2>
         </div>
       </a>
-
+      <!-- Marvel Annual Report -->
       <a href="https://wmiguel.io/projects/marvel-annual-report" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Marvel Annual Report</h2>
         </div>
       </a>
-
+      <!-- Movie Planner -->
       <a href="https://wmiguel.io/projects/movie-planner" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Movie Planner</h2>
         </div>
       </a>
-
-      <a href="https://wmiguel.io/projects/roger-ebert">
+      <!-- Roger Ebert Reviews -->
+      <a href="https://wmiguel.io/projects/roger-ebert" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>Roger Ebert Reviews</h2>
-        </div>
-      </a>
-
-      <a href="https://wmiguel.io/projects/69-love-songs.html" class="">
-        <div id="project">
-          <img src="https://cdn.audionamix.com//services-icon-01.png">
-          <h2>69 Love Songs</h2>
         </div>
       </a>
 
