--- a/projects/blank-check.html
+++ b/projects/blank-check.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
 
-    <title>William Miguel | Projects</title>
+    <title>William Miguel | Blank Check Timeline</title>
     <link rel="shortcut icon" type="image/png" href="images/wm-favicon.png"/>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -20,7 +20,7 @@
 
     <!-- Main Elements Here -->
     <nav class="header">
-      <h2><a href="https://wmiguel.io/">William Miguel</a> | <a href="https://wmiguel.io/projects">Projects</a> | Directors' Timeline</h2>
+      <h2><a href="https://wmiguel.io/">William Miguel</a> | <a href="https://wmiguel.io/projects">Projects</a> | Blank Check Timeline</h2>
       <button class="about-button">&times;</button>
     </nav>
 
