--- a/projects/cinemind-magazine.html
+++ b/projects/cinemind-magazine.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
 
-    <title>William Miguel | Projects</title>
+    <title>William Miguel | Cinemind Magazine</title>
     <link rel="shortcut icon" type="image/png" href="images/wm-favicon.png"/>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
