css updates and removal of Bootstrap on the Grid Album Project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Main Elements Here -->
     <nav class="header">
       <h2><a href="https://wmiguel.io/">William Miguel</a> | Graphic Design & Web Development</h2>
-      <button class="about-button">&times;</button>
+      <button class="about-button">i</button>
     </nav>
 
     <div id="introduction">
