--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
@@ -21,12 +22,12 @@
     <!-- Main Elements Here -->
     <nav class="header">
       <h2><a href="https://wmiguel.io/">William Miguel</a> | Projects</h2>
-      <button class="about-button">&times;</button>
+      <button class="about-button">i</button>
     </nav>
 
     <div id="container">
       <!-- 69 Love Songs -->
-      <a href="https://wmiguel.io/projects/69-love-songs.html" class="">
+      <a href="https://wmiguel.io/projects/69-love-songs" class="">
         <div id="project">
           <img src="https://cdn.audionamix.com//services-icon-01.png">
           <h2>69 Love Songs</h2>
