--- a/projects/marvel-annual-report.html
+++ b/projects/marvel-annual-report.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" type="text/css" href="../css/nav.css">
     <link rel="stylesheet" href="../css/projects/marvel-annual-report/main.css">
   </head>
 
@@ -21,7 +22,7 @@
     <!-- Main Elements Here -->
     <nav class="header">
       <h2><a href="https://wmiguel.io/">William Miguel</a> | <a href="https://wmiguel.io/projects">Projects</a> | Marvel Annual Report</h2>
-      <button class="about-button">&times;</button>
+      <button class="about-button">i</button>
     </nav>
 
     <div id="container">
