--- a/projects/roger-ebert.html
+++ b/projects/roger-ebert.html
@@ -17,13 +17,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <!-- My Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="../css/nav.css">
     <link rel="stylesheet" href="../css/projects/rogerebert/main.css">
     </head>
   <body>
     <!-- Main Elements Here -->
     <nav class="header">
       <h2><a href="https://wmiguel.io/">William Miguel</a> | <a href="https://wmiguel.io/projects">Projects</a> | Roger Ebert Reviews</h2>
-      <button class="about-button">&times;</button>
+      <button class="about-button">i</button>
     </nav>
 
     <!-- The Popup Modal -->
