--- a/projects/grid-project.html
+++ b/projects/grid-project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
 
     <title>William Miguel | The Grid Album Project</title>
     <link rel="shortcut icon" type="image/png" href="../images/wm-favicon.png"/>
