--- a/projects/roger-ebert.html
+++ b/projects/roger-ebert.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" dir="ltr">
-    <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
 
     <title>William Miguel | Roger Ebert Reviews</title>
     <link rel="shortcut icon" type="image/png" href="images/wm-favicon.png"/>
