--- a/projects/marvel-annual-report.html
+++ b/projects/marvel-annual-report.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
 
     <title>William Miguel | Marvel Annual Report</title>
     <link rel="shortcut icon" type="image/png" href="images/wm-favicon.png"/>
