Added About & Contact html files, and updated the navigation styles.

--- a/about.html
+++ b/about.html
@@ -3,21 +3,18 @@
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
 
-    <title>William Miguel | The Grid Album Project</title>
-    <link rel="shortcut icon" type="image/png" href="../images/wm-favicon.png"/>
+    <title>William Miguel | About</title>
+    <link rel="shortcut icon" type="image/png" href="images/wm-favicon.png"/>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../css/nav.css">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" href="../css/projects/grid-project/main.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
   </head>
-
   <body>
-    <div class="background-image"></div>
 
     <!-- Navbars -->
     <nav class="header">
@@ -43,17 +40,15 @@
     </nav>
 
     <!-- Main -->
-    <div class="container">
-      <div id="albumDisplay"></div>
-      <div id="albumCollection"></div>
+    <div id="wm-content">
+      <section class="wm-text">
+        <h1>About Me 👨🏻‍💻</h1>
+        <h2>I'm William, a graphic designer and web developer (in training). Website is still a work in progress.</h2>
+        <p>Find me on <a href="https://www.instagram.com/wmiguel4815/">Instagram</a>, <a href="https://twitter.com/wmiguel4815">Twitter</a> or <a href="https://letterboxd.com/wmiguel4815/">Letterboxd</a> 👍</p>
+      </section>
     </div>
 
-    <!-- Handlebars, and jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-
-    <script src="../js/projects/grid-project/images.js"></script>
-    <script src="../js/projects/grid-project/main.js"></script>
+    <!-- Scripts -->
     <script>
       function myFunction() {
         var x = document.getElementById("links-mobile");
