69 Love Songs project is now active.

--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
 
       <section id="wm-directory">
         <!-- 69 Love Songs -->
-        <a href="https://wmiguel.io/projects/69-love-songs" class="in-progress">
+        <a href="https://wmiguel.io/projects/69-love-songs">
           <div id="wm-project">
             <p>📂</p>
             <p>69 Love Songs</p>
