Tablet Friendly (I hope), and added home button to escape lyric mode.

--- a/projects/69-love-songs.html
+++ b/projects/69-love-songs.html
@@ -84,6 +84,9 @@
       <div id="next">
         <button onclick="nextTrack();">&#10095;</button>
       </div>
+      <div id="home">
+        <button onclick="goHome();">&#8962;</button>
+      </div>
     </div>
 
     <!-- Scripts -->
