New "Return Home" icon and adjusted mobile format.

--- a/projects/69-love-songs.html
+++ b/projects/69-love-songs.html
@@ -85,7 +85,7 @@
         <button onclick="nextTrack();">&#10095;</button>
       </div>
       <div id="home">
-        <button onclick="goHome();">&#8962;</button>
+        <img onclick="goHome();" src="../images/projects/69-love-songs/69ls-home.png">
       </div>
     </div>
 
